<resources>
    <string name="app_name">饱了么</string>

    <!--登录界面-->
    <string name="loginActivity_username_et">用户名</string>
    <string name="loginActivity_password_et">密码</string>
    <string name="loginActivity_rememberpsd_ck">记住密码</string>
    <string name="loginActivity_btn">登录</string>
    <string name="loginActivity_forgetpsd_tv">忘记密码？</string>
    <string name="loginActivity_new_user_register_tv">新用户注册</string>
    <string name="text_now_login">正在登录...</string>


    <!--注册界面-->
    <string name="registerActivity_username_et">用户名</string>
    <string name="registerActivity_password_et">密码</string>
    <string name="registerActivity_password_again_et">再输入一次密码</string>
    <string name="registerActivity_man_rb">男</string>
    <string name="registerActivity_women_rb">女</string>
    <string name="registerActivity_desc_et">简介</string>
    <string name="registerActivity_email_et">邮箱</string>
    <string name="registerActivity_btn">注册</string>
    <string name="forgetPsdActivity_email_et">请输入你的邮箱</string>
</resources>
