<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".ui.activity.LoginActivity"
    android:background="@drawable/loginbg3">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textColor="#100c0a"
        android:textSize="40sp" />

    <EditText

        android:id="@+id/loginActivity_username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginActivity_username_et"
        android:maxLines="1"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/loginActivity_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginActivity_password_et"
        android:maxLines="1"
        android:password="true"

        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/loginActivity_rememberpsd_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/loginActivity_rememberpsd_ck"
        android:textColor="#000000" />

    <Button
        android:id="@+id/loginActivity_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/loginActivity_btn"
        android:textColor="#000000"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/loginActivity_forgetpsd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginActivity_forgetpsd_tv"
            android:textColor="#000000" />


        <TextView
            android:id="@+id/loginActivity_new_user_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/loginActivity_new_user_register_tv"
            android:textColor="#000000" />
    </RelativeLayout>

</LinearLayout>